force-app/main/default/objects/Yacht_Integration_Settings__mdt/Yacht_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Controls integration behaviour for yacht reservation portal</description>
    <label>Yacht Integration Setting</label>
    <pluralLabel>Yacht Integration Settings</pluralLabel>
</CustomObject>