force-app/main/default/objects/Yacht_Integration_Settings__mdt/fields/API_Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>API_Timeout_ms__c</fullName>
    <label>API Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>