force-app/main/default/objects/Yacht_Integration_Settings__mdt/fields/Max_Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Party_Size__c</fullName>
    <label>Max Party Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>