force-app/main/default/objects/Yacht_Integration_Settings__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>