force-app/main/default/objects/Yacht_Integration_Settings__mdt/fields/Use_Mock_Provider__c.field-meta.xml
<CustomField>
    <fullName>Use_Mock_Provider__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Mock Provider</label>
    <type>Checkbox</type>
</CustomField>